--- a/client/src/CSS/Balance.css
+++ b/client/src/CSS/Balance.css
@@ -1,12 +1,10 @@
-#stock-info{
+#balance{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin-bottom: 10px;
-    gap: 10px;
+    grid-template-columns: 1fr 1fr;
 }
-#stock-info button{
+#balance button{
     color: black;
-  background-color: rgb(212, 212, 212);
+  background-color:  rgb(212, 212, 212);
   font-size: 1em;
   width: 50%;
   margin-right: 50px;
@@ -14,7 +12,7 @@
   border-radius: 50px;
   border: none;
 }
-#stock-info button:hover{
+#balance button:hover{
     border: 1px solid black;
     box-sizing: border-box;
     
